fix frontpage header scrollbar

--- a/client/src/component/header/nav-bar/list.css
+++ b/client/src/component/header/nav-bar/list.css
@@ -9,7 +9,6 @@
 
 .nav-bar-list-mask {
     width: 100%;
-    height: 100px;
     overflow-x: scroll;
     overflow-y: hidden;
 }
